--- a/model/definitions.yaml
+++ b/model/definitions.yaml
@@ -18,7 +18,7 @@ image processing: I have experience in writing programs to automatically manipul
 internalization: I am very experienced in creating and working with systems that make a program usable in multiple languages
 jQuery: A framework used in web front-end development
 responsive design: I have experience in design web pages so that they are easily viewable and usable on devices with varying sizes and orientations
-server sent events:
+server sent events: Allows push notifications so that a web page can update without the user having to reload it
 text processing: I have experience in writing programs which analyze and extract information from text, including well-formatted text and text written by people
 version control:
 web performance optimization: I have experience in improving a web site's performance, by adjusting how and what content is loaded.
