--- a/model/definitions.yaml
+++ b/model/definitions.yaml
@@ -1,29 +1,29 @@
-C++: A programming language often used in desktop applications
+C++: I am familiar with this programming language and have used it to create desktop applications
 CSS: I am familiar with in CSS, the language used to control appearance of web pages, including its latest version CSS 3
-Cheerio.JS: A web-scraping library
+Cheerio.JS: I am familiar with this web-scraping library
 Chinese: Mandarin Chinese is my native language
-CloudFlare: A content delivery network service that improves web page performance and robustness
-Git: My favorite version control system
-HTML: I am familiar with HTML, the language describing content of web pages, including its latest version HTML 5
-ImageMagick: A set of command-line image processing tools
+CloudFlare: I am familiar with setting up this content delivery network service, which improves web page performance and robustness
+Git: I am experienced in this version control system
+HTML: I am familiar with this language, which describes content of web pages, including its latest version HTML 5
+ImageMagick: I have used these command-line image processing tools
 Japanese: I am conversational in Japanese
-JavaScript: A programming language used on almost all web applications
-Knockout.JS: My favorite web front-end framework
-Node.JS: My favorite web back-end software
-QtQuick: A framework used in desktop applications
-RequireJS: A tool that makes it easy to divide web application code into self-contained modules
-Ruby: A programming language that I often use for scripting
+JavaScript: I am well versed in this programming language used on almost all web applications
+Knockout.JS: I am experienced in this web front-end framework
+Node.JS: I am experienced in this web back-end software
+QtQuick: I have experience in using this framework to create desktop applications
+RequireJS: I use this tool to divide web application code into maintainable modules
+Ruby: I often use this programming language for scripting
 back end development: I have experience in developing the back end of a web application
 desktop application development: I have experience in creating graphical and command-line desktop applications
 front end development: I am experienced in creating the front end of a web application
 image processing: I have experience in writing programs to automatically manipulate and combine images
 internationalization: I am very experienced in creating and working with systems that make a program usable in multiple languages
-jQuery: A framework used in web front-end development
+jQuery: I have experience using this framework in web front-end development
 responsive design: I have experience in design web pages so that they are easily viewable and usable on devices with varying sizes and orientations
-server sent events: Allows push notifications so that a web page can update without the user having to reload it
+server sent events: I have used this technology to implement push notifications so that a web page can update without the user having to reload it
 text processing: I have experience in writing programs which analyze and extract information from text, including well-formatted text and text written by people
 version control: I practice version control to keep the history of my source code  securely stored, and to help myself and collaborators make revisions
 web performance optimization: I have experience in improving a web site's performance, by adjusting how and what content is loaded.
 web scraping: I am very experienced in creating scripts which automatically extract information from web pages
-web worker: Allows a web page to perform computations in the background, without blocking its user interface
+web worker: I am able to use this technology to allow a web page to perform computations in the background, without blocking its user interface
 
