--- a/model/projects.yaml
+++ b/model/projects.yaml
@@ -133,6 +133,7 @@
     - Chinese
     - Japanese
     - desktop application development
+    - version control
   technologies:
     - Ruby
     - ImageMagick
