--- a/model/projects.yaml
+++ b/model/projects.yaml
@@ -3,9 +3,9 @@
   description:
     A web application which displays and calculates information about items from a game
   story: |
-    "Idol" is a new feature of the MMORPG [Dofus](http://www.dofus.com/){:target=external}',
-    involving hundreds of items which interacted with each other. I built this application
-    to help players understand the system, and refined its features based on player feedback.
+    "Idol" is a new feature of the MMORPG [Dofus](http://www.dofus.com/){:target=external},
+    involving hundreds of items and a scoring systemr. I built this application to help
+    players understand the system, and refined its features based on player feedback.
 
     To speed up the development process, I created scripts which crawled the game website to
     gather public information used in the application.
