--- a/model/definitions.yaml
+++ b/model/definitions.yaml
@@ -1,13 +1,13 @@
 C++: I am familiar with this programming language and have used it to create desktop applications
-CSS: I am familiar with in CSS, the language used to control appearance of web pages, including its latest version CSS 3
+CSS: I am familiar with using this language, including its latest version CSS 3, to control the appearance of web pages
 Cheerio.JS: I am familiar with this web-scraping library
 Chinese: Mandarin Chinese is my native language
 CloudFlare: I am familiar with setting up this content delivery network service, which improves web page performance and robustness
 Git: I am experienced in this version control system
-HTML: I am familiar with this language, which describes content of web pages, including its latest version HTML 5
-ImageMagick: I have used these command-line image processing tools
+HTML: I am familiar with using this language, including its latest version HTML 5, to create web pages
+ImageMagick: I have experience using these command-line image processing tools
 Japanese: I am conversational in Japanese
-JavaScript: I am well versed in this programming language used on almost all web applications
+JavaScript: I am well versed in this programming language, and have used it to create several web applications
 Knockout.JS: I am experienced in this web front-end framework
 Node.JS: I am experienced in this web back-end software
 QtQuick: I have experience in using this framework to create desktop applications
@@ -17,7 +17,7 @@ back end development: I have experience in developing the back end of a web appl
 desktop application development: I have experience in creating graphical and command-line desktop applications
 front end development: I am experienced in creating the front end of a web application
 image processing: I have experience in writing programs to automatically manipulate and combine images
-internationalization: I am very experienced in creating and working with systems that make a program usable in multiple languages
+internationalization: I am very experienced in creating and working with systems that improve a program's usability by users with different nationalities and languages
 jQuery: I have experience using this framework in web front-end development
 responsive design: I have experience in design web pages so that they are easily viewable and usable on devices with varying sizes and orientations
 server sent events: I have used this technology to implement push notifications so that a web page can update without the user having to reload it
