Fix a grammar error

--- a/model/definitions.yaml
+++ b/model/definitions.yaml
@@ -19,7 +19,7 @@ front end development: I am experienced in creating the front end of a web appli
 image processing: I have experience in writing programs to automatically manipulate and combine images
 internationalization: I am very experienced in creating and working with systems that improve a program's usability by users with different nationalities and languages
 jQuery: I have experience using this framework in web front-end development
-responsive design: I have experience in design web pages so that they are easily viewable and usable on devices with varying sizes and orientations
+responsive design: I have experience in designing web pages so that they are easily viewable and usable on devices with varying sizes and orientations
 server sent events: I have used this technology to implement push notifications so that a web page can update without the user having to reload it
 text processing: I have experience in writing programs which analyze and extract information from text, including well-formatted text and text written by people
 version control: I practice version control to keep the history of my source code  securely stored, and to help myself and collaborators make revisions
