Add new project

--- a/model/definitions.yaml
+++ b/model/definitions.yaml
@@ -1,3 +1,4 @@
+Android development: I have experience developing and releasing Android applications
 C++: I am familiar with this programming language and have used it to create desktop applications
 CSS: I am familiar with using this language, including its latest version CSS 3, to control the appearance of web pages
 Cheerio.JS: I am familiar with this web-scraping library
@@ -6,10 +7,15 @@ CloudFlare: I am familiar with setting up this content delivery network service,
 Git: I am experienced in this version control system
 HTML: I am familiar with using this language, including its latest version HTML 5, to create web pages
 ImageMagick: I have experience using these command-line image processing tools
+iOS development: I have experience developing and releasing iOS applications
 Japanese: I am conversational in Japanese
+Java: I am experienced in this programming language used in Android development
 JavaScript: I am well versed in this programming language, and have used it to create several web applications
 Knockout.JS: I am experienced in this web front-end framework
+MySQL: I am experienced with this database management system through web development frameworks as well as direct usage
 Node.JS: I am experienced in this web back-end software
+ObjectiveC: I am experienced in this programming language used in iOS development
+PHP: I am experienced in this programming language popularly used in web development
 QtQuick: I have experience in using this framework to create desktop applications
 RequireJS: I use this tool to divide web application code into maintainable modules
 Ruby: I often use this programming language for scripting
