--- a/model/order.yaml
+++ b/model/order.yaml
@@ -1,6 +1,8 @@
 - front end development
 - responsive design
 - back end development
+- Android development
+- iOS development
 - desktop application development
 - web performance optimization
 - web scraping
@@ -16,10 +18,14 @@
 - Knockout.JS
 - jQuery
 - Node.JS
+- MySQL
 - CloudFlare
 - C++
 - QtQuick
 - Ruby
+- Java
+- PHP
+- ObjectiveC
 - web worker
 - RequireJS
 - Cheerio.JS
